--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         "three": "https://unpkg.com/three/build/three.module.js",
         "three/addons/": "https://unpkg.com/three/examples/jsm/",
         "OrbitControls": "https://unpkg.com/three/examples/jsm/controls/OrbitControls.js",
-        "TrackballControls": "https://unpkg.com/three/examples/jsm/controls/TrackballControls.js"
+        "TrackballControls": "https://unpkg.com/three/examples/jsm/controls/TrackballControls.js",
+        "FlyControls": "https://unpkg.com/three/examples/jsm/controls/FlyControls.js",
+        "FirstPersonControls": "https://unpkg.com/three/examples/jsm/controls/FirstPersonControls.js"
         }
     }
     </script>
