j'esssaye de faire des trucs pour la hauteur

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
             <input name="iter" type="range" min="0" max="10" step="1" value="1" oninput="this.nextElementSibling.value = this.value" />
             <output>1</output>
         </div>
+        <h3>Y parameter</h3>
+        <small>Should the roads go up and down ?</small>
+        <div class="form-input">
+            <label for="typed-times-rule">y : </label><input name="y-param" type="checkbox" />
+        </div>
         <div class="form-input submit-button">
             <input type="submit" value="GENERATE">
         </div>
