--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                 <option value="patternF4">F → F-F*F-F</option>
                 <option value="patternF5">F → F/F**FF**F/F/F</option>
                 <option value="patternF6">F → F/FF*F**F/F*F*F**F/FF*F</option>
+                <option value="patternF7">F → -F+F+F+F+F+F+F+F+F+F+F-FF</option>
+                <option value="patternF8">F → F-F+F+F-F</option>
+                <option value="patternF9">F → F/F*F*F/F*F*F/F*F*F/F*F*F/F*F*F/F*F/F</option>
+                <option value="patternF10">F → FFF/F+*FF*FF+*F/FFF*FF</option>
+                <option value="patternF11">F → *FF-/FF+*F</option>
+                <option value="patternF12">F → *FFF/FF/FF</option>
+                <option value="patternF13">F → -F*FF/F/F/FF*F*F*FF/F+F</option>
+                <option value="patternF14">F → F-F+F*+F-F-F+*F+F-F*F</option>
                 <option value="randomPatternF">F → random</option>
             </select>
         </div>
